--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -1,3 +1,49 @@
 .header{
-    background: black;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo {
+    padding-top: 12px;
+}
+
+.top-bar {
+    flex: 1;
+    text-align: right;
+    margin-right: 3%;
+}
+
+.top-bar__item {
+    display: inline-block;
+    vertical-align: middle;
+    &:after {
+        content: '';
+        width: 4px;
+        height: 4px;
+        background: $white;
+        display: inline-block;
+        vertical-align: middle;
+        border-radius: 50%;
+        margin: 0 14px 6px 14px;
+        border-bottom: 1px solid transparent;
+    }
+    &:last-child:after {
+        display: none;
+    }
+}
+.top-bar__link {
+    color: $white;
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-decoration: none;
+    transition: 0.3s;
+    border-bottom: 1px solid transparent;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1.42;
+    &:hover {
+        border-bottom: 1px solid $white;
+    }
 }
