--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,8 +6,7 @@
 
 //blocks
 @import 'blocks/section';
-@import 'blocks/main';
-@import 'blocks/secton-main';
+@import 'blocks/section-main';
 @import 'blocks/header';
 @import 'blocks/paginator';
 @import 'blocks/order-link';
