--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	padding:0;
+	margin: 0;
+}
 html, body {
 	width: 100%;
 	height: 100%;
@@ -26,7 +30,6 @@ ul {
 .wrapper {
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 }
 
 .container {
