--- a/app/scss/blocks/section-main.scss
+++ b/app/scss/blocks/section-main.scss
@@ -11,8 +11,8 @@
     align-items: center;
     margin: 0 auto;
     width: 100%;
+    max-height: 80%;
     flex: 1;
-    padding-bottom: 20%;
 }
 .main__desc {
     display: flex;
@@ -22,4 +22,8 @@
 
 .main__button-down {
     margin-bottom: 38px;
+}
+
+.main__img-wrapper {
+    max-height: 80%;
 }
