--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,48 +1,34 @@
 @font-face {
-	font-family: 'Ubuntu';
-	font-weight: bold;
-	font-style: normal;
-	src: url("../fonts/Ubuntu/Ubuntu-B.woff") format("woff"), url("../fonts/Ubuntu/Ubuntu-B.woff2") format("woff2");
+    font-family: 'Gagalin-Regular';
+    src: url('../fonts/Gagalin/Gagalin-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	font-weight: 500;
-	font-style: normal;
-	src: url("../fonts/Ubuntu/Ubuntu-Medium.woff") format("woff"), url("../fonts/Ubuntu/Ubuntu-Medium.woff2") format("woff2");
+    font-family: 'Lifehack-Medium';
+    src: url('../fonts/Lifehack/Lifehack-Medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	font-weight: 400;
-	font-style: normal;
-	src: url("../fonts/Ubuntu/Ubuntu-Regular.woff") format("woff"), url("../fonts/Ubuntu/Ubuntu-Regular.woff2") format("woff2");
+    font-family: 'Ubuntu';
+    src: url('../fonts/Ubuntu/Ubuntu-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	font-weight: 300;
-	font-style: normal;
-	src: url("../fonts/Ubuntu/Ubuntu-Light.woff") format("woff"), url("../fonts/Ubuntu/Ubuntu-Light.woff2") format("woff2");
+    font-family: 'Ubuntu';
+    src: url('../fonts/Ubuntu/Ubuntu-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	font-weight: 200;
-	font-style: normal;
-	src: url("../fonts/Ubuntu/Ubuntu-Light.woff") format("woff"), url("../fonts/Ubuntu/Ubuntu-Light.woff2") format("woff2");
-}
-
-@font-face {
-	font-family: 'Gagalin';
-	font-weight: 400;
-	font-style: normal;
-	src: url("../fonts/Gagalin/Gagalin-Regular.woff") format("woff"), url("../fonts/Gagalin/Gagalin-Regular.woff2") format("woff2");
-}
-
-@font-face {
-	font-family: 'Lifehack';
-	font-weight: 500;
-	font-style: normal;
-	src: url("../fonts/Lifehack/Lifehack-Medium.woff") format("woff"), url("../fonts/Lifehack/Lifehack-Medium.woff2") format("woff2");
+    font-family: 'Ubuntu';
+    src: url('../fonts/Ubuntu/Ubuntu-B.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
 }
