--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -16,7 +16,7 @@ html, body {
 body {
 	line-height: 1.42;
 	font-size: 16px;
-	font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+	@include ubuntu(500);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
