--- a/app/scss/blocks/features.scss
+++ b/app/scss/blocks/features.scss
@@ -1,6 +1,3 @@
-.features {
-
-}
 .features__list {
     display: flex;
 }
@@ -15,16 +12,20 @@
 .features__img-wrapper {
     margin: 0 auto;   
     margin-bottom: 34px;
+    max-height: 90px;
 }
 
 .features__desc {
     text-align: center;
-    font-weight: 200;
+    @include ubuntu(light);
     font-size: 14px;
     line-height: 1.7;
+    color: $dark;
 }
 
 .features__title {
-    font-family: Lifehack;
+    @include lifehack;
+    font-weight: 300;
     font-size: 24px;
+    line-height: 1.2;
 }
