--- a/app/scss/blocks/section.scss
+++ b/app/scss/blocks/section.scss
@@ -4,7 +4,7 @@
 }
 
 .section__title {
-    font-family: Gagalin;
+    @include gagalin;
     font-size: 72px;
     text-align: center;
     &--color-yellow {
@@ -18,7 +18,7 @@
 
 .section__text {
     font-size: 4rem;
-    font-family: Lifehack;
+    @include lifehack;
     line-height: 1;
     &--white {
         color: $white;
