--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -13,4 +13,5 @@
 @import 'blocks/best';
 @import 'blocks/features';
 @import 'blocks/reviews';
-
+@import 'blocks/section-team';
+@import 'blocks/section-menu';
