Add styles form

--- a/app/scss/blocks/order-link.scss
+++ b/app/scss/blocks/order-link.scss
@@ -1,7 +1,7 @@
 .order-link {
     color: $white;
     background-color: $red;
-    padding: 5px 10px;
+    padding: 6px 10px;
     border-radius: 3px;
     text-transform: uppercase;
     font-weight: 500;
@@ -9,7 +9,13 @@
     transition: 0.3s;
     display: inline-block;
     font-size: 13px;
+    border: 1px solid transparent;
+    outline: none;
     &:hover {
         background-color: #c1401e;
     }
+}
+
+.order-link--submit {
+    margin-right: 25px;
 }
