--- a/app/scss/blocks/section-menu.scss
+++ b/app/scss/blocks/section-menu.scss
@@ -27,14 +27,38 @@
     color: #fff;
     display: flex;
     align-items: flex-end;
+    background-size: cover;
+    background-repeat: none;
 }
+.accordeon-menu__item-content {
+    height: 100%;
+    background: rgba(47,50,52,.93);
+    width: 540px;
+    overflow: hidden;
+    display: inline-flex;
+    display: none;
+}
+
+.accordeon-menu__item--is-active .accordeon-menu__item-content {
+    display: block;
+}
+
+.accordeon-menu__item-text {
+    padding: 50px 30px;
+    @include ubuntu(light);
+    font-size: 14px;
+}
+
 .accordeon-menu__link {
     @include gagalin;
     font-size: 40px;
     color: #fff;
     text-decoration: none;
     white-space: nowrap;
-    transform: rotate(-90deg);
+    transform: rotate(180deg);
+    writing-mode: vertical-lr;
+    margin: 15px;
+    margin-bottom: 25px;
 }
 
 
