Add rem size font

--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -23,3 +23,31 @@
 @mixin lifehack() {
     font-family: 'Lifehack-Medium';
 }
+
+@mixin laptop {
+	@media screen and (max-width: $laptop) {
+		@content
+	}
+}
+
+@mixin tablets {
+	@media screen and (max-width: $tablets) {
+		@content
+	}
+}
+
+@mixin phones {
+	@media screen and (max-width: $phones) {
+		@content
+	}
+}
+
+@mixin phones-small {
+	@media screen and (max-width: $phones-small) {
+		@content
+	}
+}
+
+@function rem($px) {
+	@return $px / 16px+0rem;
+}
