--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,3 +5,9 @@ $white: #ffffff;
 $orange: #f08c33;
 $input-radio: #e35028;
 $green: #8ac03e;
+
+$desktop: 1200px;
+$laptop: 992px;
+$tablets: 768px;
+$phones: 480px;
+$phones-small: 375px;
