--- a/app/scss/blocks/features.scss
+++ b/app/scss/blocks/features.scss
@@ -6,19 +6,19 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding: 0 6px;
+    padding: 0 rem(6px);
 }
 
 .features__img-wrapper {
     margin: 0 auto;   
-    margin-bottom: 34px;
-    max-height: 90px;
+    margin-bottom: rem(34px);
+    max-height: rem(90px);
 }
 
 .features__desc {
     text-align: center;
     @include ubuntu(light);
-    font-size: 14px;
+    font-size: rem(14px);
     line-height: 1.7;
     color: $dark;
 }
@@ -41,6 +41,6 @@
 .features__title {
     @include lifehack;
     font-weight: 300;
-    font-size: 24px;
+    font-size: rem(24px);
     line-height: 1.2;
 }
