--- a/app/scss/blocks/paginator.scss
+++ b/app/scss/blocks/paginator.scss
@@ -7,28 +7,28 @@
 
 .paginator__item {
     display: flex;
-    width: 14px;
-    height: 14px;
-    margin-bottom: 10px;
+    width: rem(14px);
+    height: rem(14px);
+    margin-bottom: rem(10px);
     cursor: pointer;
     align-items: center;
     position: relative;
     transition: 0.4s;
     &:hover {
         opacity: 1;
-        border: 1px solid $white;
+        border: rem(1px) solid $white;
         border-radius: 50%;
     }
     &--active {
         opacity: 1;
-        border: 1px solid $white;
+        border: rem(1px) solid $white;
         border-radius: 50%;
     }
 }
 .paginator__link {
     display: block;
-    width: 6px;
-    height: 6px;
+    width: rem(6px);
+    height: rem(6px);
     background-color: $white;
     border-radius: 50%;
     margin: 0 auto;
