--- a/app/scss/blocks/section-main.scss
+++ b/app/scss/blocks/section-main.scss
@@ -33,7 +33,7 @@
     height: min-content;
     display: flex;
     align-self: center;
-    max-width: 40px;
+    max-width: rem(40px);
 }
 
 .main__img-wrapper {
