--- a/app/scss/blocks/section-map.scss
+++ b/app/scss/blocks/section-map.scss
@@ -17,7 +17,7 @@
 }
 
 .footer__left {
-    padding: 20px 0;
+    padding: rem(20px) 0;
     width: 50%;
 }
 .contacts__address {
@@ -27,7 +27,7 @@
 .contacts__phone {
     @include ubuntu(bold);
     color: $red;
-    margin-top: 6px;
+    margin-top: rem(6px);
 }
 
 .footer__right {
@@ -39,7 +39,7 @@
     justify-content: flex-end;
 }
 .social-footer__item {
-    margin-right: 18px;
+    margin-right: rem(18px);
 }
 .social-footer__item:last-child {
     margin-right: 0;
@@ -47,8 +47,8 @@
 
 .social-footer__icon {
     fill: #5e5e5e;
-    max-width: 22px;
-    max-height: 22px;
+    max-width: rem(22px);
+    max-height: rem(22px);
     transition: 0.2s;
 }
 .social-footer__icon:hover {
