--- a/app/scss/blocks/section-menu.scss
+++ b/app/scss/blocks/section-menu.scss
@@ -33,7 +33,7 @@
 .accordeon-menu__item-content {
     height: 100%;
     background: rgba(47,50,52,.93);
-    width: 540px;
+    width: rem(540px);
     overflow: hidden;
     display: inline-flex;
     display: none;
@@ -44,21 +44,21 @@
 }
 
 .accordeon-menu__item-text {
-    padding: 50px 30px;
+    padding: rem(50px) rem(30px);
     @include ubuntu(light);
-    font-size: 14px;
+    font-size: rem(14px);
 }
 
 .accordeon-menu__link {
     @include gagalin;
-    font-size: 40px;
+    font-size: rem(40px);
     color: #fff;
     text-decoration: none;
     white-space: nowrap;
     transform: rotate(180deg);
     writing-mode: vertical-lr;
-    margin: 15px;
-    margin-bottom: 25px;
+    margin: rem(15px);
+    margin-bottom: rem(25px);
 }
 
 
