--- a/app/scss/blocks/section-team.scss
+++ b/app/scss/blocks/section-team.scss
@@ -18,19 +18,19 @@
     top: 0;
     bottom: 0;
     text-align: left;
-    padding: 112px 92px;
+    padding: rem(112px) rem(92px);
 }
 .accordeon {
-    margin-top: 45px;
+    margin-top: rem(45px);
 }
 
 .accordeon__link {
     color: #fff;
     text-decoration: none;
-    font-size: 14px;
+    font-size: rem(14px);
     @include gagalin;
     display: inline-block;
-    margin-bottom: 14px;
+    margin-bottom: rem(14px);
 }
 
 .accordeon__item--is-active .accordeon__link {
@@ -46,7 +46,7 @@
     border: 5px solid transparent;
     border-top-color: $yellow;
     border-bottom-width: 0;
-    margin-right: 8px;
+    margin-right: rem(8px);
 }
 
 .accordeon-content {
@@ -61,7 +61,7 @@
 
 .accordeon-desc-title {
     @include ubuntu(bold);
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
 }
 
 .accordeon-desc-text {
@@ -69,11 +69,11 @@
 }
 
 .accordeon__image {
-    height: 100px;
-    width: 100px;
+    height: rem(100px);
+    width: rem(100px);
     display: inline-block;
     vertical-align: top;
-    margin-bottom: 42px;
+    margin-bottom: rem(42px);
     flex-basis: 100%;
     border-radius: 50%;
     overflow: hidden;
@@ -86,5 +86,5 @@
     display: inline-block;
     width: 50%;
     margin: 0 auto;
-    padding: 16px;
+    padding: rem(16px);
 }
