--- a/app/scss/blocks/section.scss
+++ b/app/scss/blocks/section.scss
@@ -5,7 +5,7 @@
 
 .section__title {
     @include gagalin;
-    font-size: 72px;
+    font-size: rem(72px);
     text-align: center;
     &--color-yellow {
         color: $yellow;
@@ -14,7 +14,7 @@
         color:$white;
     }
     &--color-dark {
-        margin-bottom: 58px;
+        margin-bottom: rem(58px);
     }
     &--padding-top-left {
         padding-top: 10%;
