--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -17,3 +17,4 @@
 @import 'blocks/section-menu';
 @import 'blocks/form-section';
 @import 'blocks/section-map';
+@import 'blocks/hamburger-bar.scss';
