--- a/app/scss/blocks/order-link.scss
+++ b/app/scss/blocks/order-link.scss
@@ -14,6 +14,11 @@
     &:hover {
         background-color: #c1401e;
     }
+    @include tablets {
+		&.order-link--header {
+			margin-right: rem(60px);
+		}
+	}
 }
 
 .order-link--submit {
