ADd phone and tablets

--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -46,4 +46,7 @@ ul {
 .container--footer {
 	flex-direction: row;
 	justify-content: space-between;
+	@include phones {
+		flex-direction: column;
+	}
 }
