--- a/app/scss/blocks/section.scss
+++ b/app/scss/blocks/section.scss
@@ -33,6 +33,12 @@
     &--white {
         color: $white;
     }
+    @include phones {
+		font-size: rem(54px);
+	}
+	@include phones-small {
+		font-size: rem(44px);
+	}
 }
 
 
