--- a/app/scss/blocks/section-main.scss
+++ b/app/scss/blocks/section-main.scss
@@ -67,10 +67,22 @@
 .main__img-wrapper {
     max-height: 80%;
     max-width: 60%;
+    @include tablets {
+		width: 100%;
+		height: 65%;
+		text-align: center;
+	}
+	@include phones {
+		height: 50%;
+	}
 }
 
 .main__img {
     object-fit: cover;
+    display: inline-block;
+	position: relative;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .main__button-down-icon {
