--- a/app/scss/blocks/section-team.scss
+++ b/app/scss/blocks/section-team.scss
@@ -19,7 +19,12 @@
 			bottom: 0;
 			background-color: rgba(47, 50, 52, .93);
 		}
-	}
+    }
+    .section__title {
+        @include phones {
+            text-align: center;
+        }
+    }
 }
 
 .team__content {
