--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -6,7 +6,8 @@ $orange: #f08c33;
 $input-radio: #e35028;
 $green: #8ac03e;
 
-$desktop: 980px;
+$desktop: 1200px;
+$laptop: 980px;
 $tablets: 768px;
 $phones: 480px;
 $phones-small: 375px;
