--- a/app/scss/blocks/section-main.scss
+++ b/app/scss/blocks/section-main.scss
@@ -2,7 +2,6 @@
     background-image: url('../../app/images/section-main/img-bg.jpg');
     background-repeat: no-repeat;
     background-position: 50%;
-    -webkit-background-size: cover;
     background-size: cover;
     position: relative;
     .section__title {
@@ -65,8 +64,8 @@
 }
 
 .main__img-wrapper {
-    max-height: 80%;
-    max-width: 60%;
+    max-height: 100%;
+    max-width: 100%;
     @include tablets {
 		width: 100%;
 		height: 65%;
@@ -80,9 +79,12 @@
 .main__img {
     object-fit: cover;
     display: inline-block;
-	position: relative;
-	max-width: 100%;
-	max-height: 100%;
+    position: relative;
+    @include tablets {
+		max-width: 100%;
+		max-height: 100%;
+		text-align: center;
+	}
 }
 
 .main__button-down-icon {
