--- a/app/scss/blocks/section.scss
+++ b/app/scss/blocks/section.scss
@@ -20,6 +20,9 @@
         padding-top: 10%;
         padding-left: 10%;
     }
+    @include phones {
+		font-size: rem(50px);
+	}
 }
 
 .section__title--text-align-left {
