--- a/app/scss/blocks/section-menu.scss
+++ b/app/scss/blocks/section-menu.scss
@@ -1,5 +1,5 @@
 .menu {
-    background-image: url(../../images/section-menu/bg-menu.jpg);
+    background-image: url(../images/section-menu/bg-menu.jpg);
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
