--- a/app/scss/blocks/form-section.scss
+++ b/app/scss/blocks/form-section.scss
@@ -14,7 +14,7 @@
 }
 
 .form-section {
-    background-image: url(../../images/section-form/bg-form.jpg);
+    background-image: url(../images/section-form/bg-form.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
