Add mixins small-phone

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,9 +5,10 @@ $white: #ffffff;
 $orange: #f08c33;
 $input-radio: #e35028;
 $green: #8ac03e;
+$link-menu-active: #f9b43b;
 
 $desktop: 1200px;
 $laptop: 980px;
 $tablets: 768px;
 $phones: 480px;
-$phones-small: 375px;
+$phones-small: 350px;
