--- a/app/scss/blocks/order-link.scss
+++ b/app/scss/blocks/order-link.scss
@@ -4,6 +4,7 @@
     padding: rem(6px) rem(10px);
     border-radius: rem(3px);
     text-transform: uppercase;
+    cursor: pointer;
     font-weight: 500;
     text-decoration: none;
     transition: 0.3s;
