--- a/app/scss/blocks/section-map.scss
+++ b/app/scss/blocks/section-map.scss
@@ -1,5 +1,5 @@
 .map {
-    background-image: url(../../images/section-map/mar-img.png);
+    background-image: url(../images/section-map/mar-img.png);
     background-size: cover;
     background-repeat: none;
     height: 95%;
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: center;
     background-color:$dark;
-    background-image: url(../../images/section-map/map-bg.jpg);
+    background-image: url(../images/section-map/map-bg.jpg);
     background-size: cover;
     text-align: left;
     flex: 0 0 auto;
