--- a/app/scss/blocks/best.scss
+++ b/app/scss/blocks/best.scss
@@ -1,9 +1,13 @@
 .best {
-    background-image: url('../../app/images/section-best/section-two-bg.jpg');
+    background-image: url('../images/section-best/section-two-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    @include tablets {
+        background-image: url('../images/section-best/section-two-bg_ipad.jpg');
+    }
     @include phones {
-        height: auto;
+        background-image: url('../images/section-best/section-two-bg_iphone.jpg');
+        height: 100vh;
     }
     .section__title--color-dark {
         @include phones {
