--- a/app/scss/blocks/features.scss
+++ b/app/scss/blocks/features.scss
@@ -18,7 +18,7 @@
 		flex-direction: row;
 		justify-content: space-between;
 		text-align: left;
-		margin-bottom: rem(10px);
+		margin-bottom: rem(3px);
 	}
 }
 
@@ -26,6 +26,10 @@
     margin: 0 auto;   
     margin-bottom: rem(34px);
     max-height: rem(90px);
+    @include phones {
+        margin-bottom: 0;
+        max-height: initial;
+    }
 }
 
 .features__desc {
@@ -42,6 +46,10 @@
 .features__img {
     max-width: 130px;
     max-height: 100px;
+    @include phones {
+        max-width: 80px;
+    }
+    
 }
 .features__img--meat {
     fill: $red;
@@ -61,6 +69,15 @@
     font-size: rem(24px);
     line-height: 1.2;
     @include phones-small {
-		margin-bottom: rem(5px);
+		margin-bottom: rem(2px);
 	}
+}
+
+.features__text {
+    p {
+        @include phones-small {
+            margin-bottom:6px;
+            margin-top:6px;
+        }
+    }
 }
