--- a/app/scss/blocks/section-menu.scss
+++ b/app/scss/blocks/section-menu.scss
@@ -29,6 +29,9 @@
     align-items: flex-end;
     background-size: cover;
     background-repeat: none;
+    @include phones-small {
+        display: none;
+    }
 }
 .accordeon-menu__item-content {
     height: 100%;
@@ -40,6 +43,12 @@
     @include tablets {
         width: auto;
         flex: 1;
+    }
+}
+
+.accordeon-menu__item--is-active {
+    @include phones-small {
+        display: flex;
     }
 }
 
