Add menu overlay styles

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -18,3 +18,4 @@
 @import 'blocks/form-section';
 @import 'blocks/section-map';
 @import 'blocks/hamburger-bar.scss';
+@import 'blocks/overlay-menu';
