--- a/app/scss/blocks/overlay-menu.scss
+++ b/app/scss/blocks/overlay-menu.scss
@@ -2,13 +2,16 @@
     position: fixed;
     right: 0;
     width: 100%;
-    height: 100%;
     top:0;
     background: rgba(47,50,52,.95);
     align-items: center;
     justify-content: center;
     z-index: 50;
     text-align: center;
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
 }
 .overlay-menu__list {
     display: flex;
@@ -42,4 +45,14 @@
 
 .overlay-menu__item:last-child:after {
     display: none;
+}
+
+.overlay--open {
+    opacity: .95;
+    visibility: visible;
+    height: 100%;
+}
+
+.body-active-menu {
+    overflow: hidden;
 }
