--- a/app/scss/blocks/burgers.scss
+++ b/app/scss/blocks/burgers.scss
@@ -231,6 +231,7 @@
 .burger__composition {
 	position: absolute;
 	left: 0;
+	cursor: pointer;
 	top: rem(10px);
 	width: rem(90px);
 	height: rem(90px);
@@ -244,6 +245,18 @@
 	justify-content: center;
 	border-radius: rem(5px);
 	transition: .2s;
+	&.active {
+		background-color: $orange;
+		.dropdown {
+			left: 100%;
+			opacity: .9;
+		}
+	}
+}
+
+.burger__composition:hover {
+	background-color: $red;
+	transition: 0.2s;
 }
 
 .burger__composition-image {
@@ -259,7 +272,8 @@
     top: 0;
     left: 0;
     background-color: $white;
-    opacity: 0.9;
+    opacity: 0;
+	left: -9999px;
 	left: 100%;
 	border-radius: rem(5px);
 	transition: 0.2s;
