--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -30,6 +30,7 @@ ul {
 .wrapper {
 	width: 100%;
 	height: 100%;
+	//overflow: hidden;
 }
 
 .container {
@@ -50,3 +51,9 @@ ul {
 		flex-direction: column;
 	}
 }
+
+.content {
+	height: 100%;
+	transition: transform 1s;
+}
+
