ADD style how at work

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -20,4 +20,5 @@
 @import 'blocks/hamburger-bar.scss';
 @import 'blocks/overlay-menu';
 @import 'blocks/burgers';
-@import 'blocks/popup.scss';
+@import 'blocks/popup';
+@import 'blocks/section-how-are-work'
