--- a/app/scss/blocks/burgers.scss
+++ b/app/scss/blocks/burgers.scss
@@ -275,9 +275,8 @@
     background-color: $white;
     opacity: 0;
 	left: -9999px;
-	left: 100%;
 	border-radius: rem(5px);
-	transition: 0.2s;
+	transition: opacity 0.2s;
 	padding: rem(20px);
 	width: rem(270px);
 	@include tablets {
